OO-3206: add a validation to the translation tool

--- a/src/main/java/org/olat/core/util/i18n/ui/_content/translationToolI18nItemEdit.html
+++ b/src/main/java/org/olat/core/util/i18n/ui/_content/translationToolI18nItemEdit.html
@@ -58,6 +58,9 @@
 			</div>
 			<h5><i class="o_flag o_flag_$targetLanguageKey"> </i> $r.translate("generic.${customizingPrefix}lang.target"): $targetLanguage</h5>
 			$r.render("targetArea")
+			#if($f.hasError("targetArea"))
+				<div class="clearfix">$r.render("targetArea_ERROR")</div>
+			#end
 		</div>		
 		<div class="o_button_group">
 		#if ($hasPrevious) 
