OO-2967: all a list of the assessment planned today and in the future in assessment tool, add a message if an assessment is done currently

--- a/src/main/java/org/olat/course/assessment/ui/tool/_content/course_overview.html
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_content/course_overview.html
@@ -61,7 +61,11 @@ $r.contextHelpWithWrapper("Using Course Tools#_bewertungswerkzeug")
 			#end
 		</table>
 	</div>
-	<div class="col-sm-6"></div>
+	<div class="col-sm-6">
+	#if($r.available("assessmentModes"))
+		$r.render("assessmentModes")
+	#end
+	</div>
 	#end
 </div>
 </div>
