--- a/src/main/java/org/olat/course/nodes/iq/_content/confirm_extra_time.html
+++ b/src/main/java/org/olat/course/nodes/iq/_content/confirm_extra_time.html
@@ -1,3 +1,12 @@
+#if($r.isNotEmpty($assessmemtModeMessages))
+	<div class="o_warning">$r.translate("warning.assessment.mode")
+		<ul>
+		#foreach($assessmemtModeMessage in $assessmemtModeMessages)
+			<li>$assessmemtModeMessage</li>
+		#end
+		</ul>
+	</div>
+#end
 <div class="o_error">$r.translate("extra.time.warning")</div>
 <p>$r.translate("extra.time.explain.1", $fullnames) <span class="form-inline">$r.render("extra.time.minutes")#if($f.hasError("extra.time.minutes")) <span class="o_icon o_icon_error"></span>#end</span> $r.translate("extra.time.explain.2", $fullnames)</p>
 #if($f.hasError("extra.time.minutes"))
