OO-3117: Show metadatas on the right side and save if shown or hide

--- a/src/main/java/org/olat/modules/qpool/ui/_content/item_details.html
+++ b/src/main/java/org/olat/modules/qpool/ui/_content/item_details.html
@@ -7,12 +7,18 @@
 	</div>
 </div>
 <div class="container-fluid clearfix">
-	$r.render("type_specifics")
-</div>
-<hr/>
-<div class="clearfix">
 	#if($metadataSwitch)
-		$r.render("metadatas")
+		<div class="col-md-8">
+			$r.render("type_specifics")
+			$r.render("comments")
+		</div>
+		<div class="col-md-4">
+			$r.render("metadatas")
+		</div>
+	#else
+	<div class="col-md-12">
+		$r.render("type_specifics")
+		$r.render("comments")
+	</div>
 	#end
 </div>
-$r.render("comments")
