OO-2967: refactor the list of assessed identities in assessment tools to be delivered by the resource or the course element them self

--- a/src/main/java/org/olat/ims/qti21/ui/_content/assessment_details.html
+++ b/src/main/java/org/olat/ims/qti21/ui/_content/assessment_details.html
@@ -1,6 +1,6 @@
 $r.render("sessions")
-#if($r.available("reset.tool"))
+#if($r.available("menu.reset.title"))
 	<div class="o_button_group">
-		$r.render("reset.tool")
+		$r.render("menu.reset.title")
 	</div>
 #end
