OO-3110: Avoid empty space on the border of the question detail view

--- a/src/main/java/org/olat/modules/qpool/ui/_content/item_details.html
+++ b/src/main/java/org/olat/modules/qpool/ui/_content/item_details.html
@@ -6,7 +6,7 @@
 		#end
 	</div>
 </div>
-<div class="container-fluid clearfix">
+<div class="row">
 	#if($metadataSwitch)
 		<div class="col-md-8">
 			$r.render("type_specifics")
