OO-3116: Bulk metadata change respects rights in review process

--- a/src/main/java/org/olat/modules/qpool/ui/metadata/_content/bulk_change.html
+++ b/src/main/java/org/olat/modules/qpool/ui/metadata/_content/bulk_change.html
@@ -8,7 +8,9 @@ $r.contextHelpWithWrapper("Data Management#qb_change_md")<br/>
 <fieldset><legend>$r.translate("rights")</legend>
 	$r.render("rights")
 </fieldset>
-<fieldset><legend>$r.translate("technical")</legend>
-	$r.render("technical")
-</fieldset>
+#if($r.available("technical"))
+	<fieldset><legend>$r.translate("technical")</legend>
+		$r.render("technical")
+	</fieldset>
+#end
 $r.render("buttons")
