--- a/src/main/java/org/olat/commons/calendar/ui/_content/calAggregatedFeed.html
+++ b/src/main/java/org/olat/commons/calendar/ui/_content/calAggregatedFeed.html
@@ -1,3 +1,10 @@
-<h4>$r.translate("cal.icalfeed.aggregated.title")</h4>
-<div class="o_info">$r.translate("cal.icalfeed.aggregated.info")</div>
-<div class="clearfix"><input type="text" value="$icalFeedLink" style="width:100%;" onclick="this.select();"/></div>
+#if($r.isNotEmpty($icalFeedLink))
+	<h4>$r.translate("cal.icalfeed.title")</h4>
+	<div class="o_info">$r.translate("cal.icalfeed.info")</div>
+	<div class="clearfix"><input type="text" value="$icalFeedLink" style="width:100%;" onclick="this.select();"/></div>
+#end
+#if($r.isNotEmpty($icalAggregatedFeedLink))
+	<h4>$r.translate("cal.icalfeed.aggregated.title")</h4>
+	<div class="o_info">$r.translate("cal.icalfeed.aggregated.info")</div>
+	<div class="clearfix"><input type="text" value="$icalAggregatedFeedLink" style="width:100%;" onclick="this.select();"/></div>
+#end
