OO-3116: Use the metadata accordeon in the question list quick view

--- a/src/main/java/org/olat/modules/qpool/ui/_content/item_list_details.html
+++ b/src/main/java/org/olat/modules/qpool/ui/_content/item_list_details.html
@@ -1,10 +1,8 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-6">
-			$r.render("mainBasicPanel")
-		</div>
-		<div class="col-sm-6">
-			$r.render("preview.container")
-		</div>
+<div class="row">
+	<div class="col-sm-8">
+		$r.render("preview.container")
+	</div>
+	<div class="col-sm-4">
+		$r.render("metadata")
 	</div>
 </div>
