--- a/src/main/java/org/olat/modules/portfolio/ui/_content/portfolio_element_row.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/_content/portfolio_element_row.html
@@ -123,7 +123,8 @@
 #if(${row.isPage()})
 <div class="o_portfolio_page o_block_large">
 	<div class="#if($r.isNotNull($row.assignment)) o_portfolio_assignments #end  #if($row.imageAlign == "background") o_block_imagebg #end" #if($row.imageAlign == "background" && $r.isNotNull($row.imageUrl)) style="background-image: url('$mapperThumbnailUrl/${row.imageUrl}')" #end>
-		<h4><i class="o_icon ${row.getCssClassStatus()} o_icon-fw" title="$r.translate("page.status"): $r.translate("$row.getPageStatusI18nKey()")"> </i> $r.escapeHtml($row.title)</h4>
+		<h4><i class="o_icon ${row.getCssClassStatus()} o_icon-fw" title="$r.translate("page.status"): $r.translate("$row.getPageStatusI18nKey()")"> </i> $r.escapeHtml($row.title)
+			#if($r.isTrue($userInfos))<small>$userInfosRenderer.renderPortfolioElementRow($row)</small> #end</h4>
 		<div class="o_portfolio_page_body">
 			<div class="o_portfolio_page_meta_wrapper">
 				#if($r.isNotNull($row.assignment))
