--- a/src/main/java/org/olat/modules/portfolio/ui/shared/_content/shared_with_me.html
+++ b/src/main/java/org/olat/modules/portfolio/ui/shared/_content/shared_with_me.html
@@ -1,5 +1,3 @@
 $r.contextHelpWithWrapper("Shared with me")
-<h2>
-	$r.translate("shared.with.me")
-</h2>
+<h2>$r.translate("shared.with.me")</h2>
 $r.render("table")
