OO-3117: Styling of the review action panel

--- a/src/main/java/org/olat/modules/qpool/ui/_content/review_action.html
+++ b/src/main/java/org/olat/modules/qpool/ui/_content/review_action.html
@@ -1,5 +1,5 @@
 #if($reviewMessage)
-	<div class="o_warning">
+	<div class="o_instruction">
 		$reviewMessage
 		<div class="o_button_group">
 			$r.render("process.activate.start.review")
