--- a/src/main/java/org/olat/modules/qpool/ui/metadata/_content/author_list.html
+++ b/src/main/java/org/olat/modules/qpool/ui/metadata/_content/author_list.html
@@ -1,7 +1,5 @@
 #foreach($author in $authors)
-	<div class="o_icon o_icon_user">
-		$r.render(${author})
-	</div>
+	<span class='o_qitem_author'><i class="o_icon o_icon_user"></i> $r.render(${author})</span>
 #end
 #if($r.available("manage.owners"))
 	<br/>$r.render("manage.owners")
