OO-3243 implement analytics service and google analytics implementation

--- a/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
+++ b/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
@@ -83,6 +83,10 @@ function o_mathjax(fct_success) {
 		}
 	});
 }
+## Analytics code, if available
+$!analytics
+##
+
 /* ]]> */
 </script>
 ## jQuery libraries
