--- a/src/main/java/org/olat/modules/qpool/ui/_content/presentation.html
+++ b/src/main/java/org/olat/modules/qpool/ui/_content/presentation.html
@@ -1,4 +1,6 @@
 <h4><i class="o_icon o_icon_qpool"> </i> $r.translate("presentation.title")$r.contextHelpWithWrapper("Question Bank")</h4>
 #if($r.available("index"))
 	$r.render("index")
+#else
+	<div class="o_warning">$r.translate("warning.qpool.index.emtpy")</div>
 #end
