OO-3265: use a different drag and drop library (dragula), fix double save issue and javascript errors

--- a/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
+++ b/src/main/java/org/olat/core/commons/fullWebApp/_content/fullwebapplayout.html
@@ -136,6 +136,7 @@ $!analytics
 	<link type="text/css" href='$r.staticLink("js/jquery/cropper/cropper.css")' rel="stylesheet" />
 	<link type="text/css" href='$r.staticLink("js/jquery/sliderpips/jquery-ui-slider-pips.css")' rel="stylesheet" />
 	<link type="text/css" href='$r.staticLink("js/jquery/ui/jquery-ui-1.11.4.custom.min.css")' rel="stylesheet" />
+	<link type="text/css" href='$r.staticLink("js/dragula/dragula.css")' rel="stylesheet" />
 #else
 	<link type="text/css" href='$r.staticLink("js/js.plugins.min.css")' rel="stylesheet" />
 #end
